# volume-terminator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
apps/: vc_calc_surface_metrics.cpp  vc_fill_quadmesh.cpp  vc_grow_seg_from_seed.cpp  vc_grow_seg_from_segments.cpp  vc_obj2tifxyz.cpp  vc_objrefine.cpp  vc_render_tifxyz.cpp  vc_render_video.cpp  vc_seg_add_overlap.cpp  vc_tiffxyz_upscale_grounding.cpp  vc_tifxyz2obj.cpp  vc_tifxyz_inp_mask.cpp  vc_tifxyz_winding.cpp
apps/VT/: COutlinedTextItem.cpp  COutlinedTextItem.hpp  CPointCollectionWidget.cpp  CPointCollectionWidget.hpp  CSegmentationEditorWindow.cpp  CSegmentationEditorWindow.hpp  CSurfaceCollection.cpp  CSurfaceCollection.hpp  CVolumeViewer.cpp  CVolumeViewer.hpp  CVolumeViewerView.cpp  CVolumeViewerView.hpp  CWindow.cpp  CWindow.hpp  CWindowContextMenu.cpp  CommandLineToolRunner.cpp  CommandLineToolRunner.hpp  ConsoleOutputWidget.cpp  ConsoleOutputWidget.hpp  DrawingWidget.cpp  DrawingWidget.hpp  OpChain.cpp  OpChain.hpp  OpsList.cpp  OpsList.hpp  OpsList.ui  OpsSettings.cpp  OpsSettings.hpp  OpsSettings.ui  PathData.cpp  PathData.hpp  ProgressUtil.cpp  ProgressUtil.hpp  SeedingWidget.cpp  SeedingWidget.hpp  SegmentRenderThread.cpp  SegmentRenderThread.hpp  SettingsDialog.cpp  SettingsDialog.hpp  SurfaceTreeWidget.cpp  (+8 more)
core/src/: BoundingBox.hpp  Cache.hpp  ChunkedTensor.hpp  CostFunctions.hpp  DateTime.hpp  DiskBasedObjectBaseClass.cpp  DiskBasedObjectBaseClass.hpp  FileFilters.hpp  HashFunctions.hpp  ImageIO.cpp  ImageIO.hpp  LRUCache.hpp  Logging.cpp  Logging.hpp  MeshIO.hpp  Metadata.cpp  Metadata.hpp  OBJReader.cpp  OBJReader.hpp  OBJWriter.cpp  OBJWriter.hpp  PLYReader.cpp  PLYReader.hpp  PLYWriter.cpp  PLYWriter.hpp  PerPixelMap.cpp  PerPixelMap.hpp  PointSetIO.hpp  Render.cpp  Render.hpp  Reslice.cpp  Reslice.hpp  Segmentation.cpp  Segmentation.hpp  SkyscanMetadataIO.hpp  Slicing.cpp  Slicing.hpp  Surface.cpp  Surface.hpp  SurfaceDef.hpp  (+21 more)
scripts/: build_from_source.sh  flatboi.py  vc_sync.py
src/apps/: vc_calc_surface_metrics.cpp  vc_fill_quadmesh.cpp  vc_grow_seg_from_seed.cpp  vc_grow_seg_from_segments.cpp  vc_obj2tifxyz.cpp  vc_objrefine.cpp  vc_render_tifxyz.cpp  vc_render_video.cpp  vc_seg_add_overlap.cpp  vc_tiffxyz_upscale_grounding.cpp  vc_tifxyz2obj.cpp  vc_tifxyz_inp_mask.cpp  vc_tifxyz_winding.cpp
src/apps/VT/: COutlinedTextItem.cpp  CPointCollectionWidget.cpp  CPointCollectionWidget.hpp  CSegmentationEditorWindow.cpp  CSurfaceCollection.cpp  CSurfaceCollection.hpp  CVolumeViewer.cpp  CVolumeViewer.hpp  CWindow.cpp  CWindow.hpp  CommandLineToolRunner.hpp  DrawingWidget.cpp  DrawingWidget.hpp  OpChain.cpp  OpChain.hpp  OpsList.hpp  OpsSettings.hpp  PathData.cpp  SeedingWidget.cpp  SeedingWidget.hpp  SegmentRenderThread.cpp  SettingsDialog.cpp  UDataManipulateUtils.hpp  formsetsrc.cpp  formsetsrc.hpp
src/core/: Segmentation.hpp  Slicing.cpp  Slicing.hpp  Surface.cpp  Surface.hpp  SurfaceVoxelizer.cpp  SurfaceVoxelizer.hpp  Volume.cpp  Volume.hpp  VolumePkg.cpp  VolumePkg.hpp
src/openmp_stub/: omp.h
src/tracer/: ChunkedTensor.hpp  SurfaceHelpers.cpp  SurfaceHelpers.hpp  surface_metrics.cpp  surface_metrics.hpp
src/ui/: VCCollection.cpp
